<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/from"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/startname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/from"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/arklw"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/endname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/skill"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/to"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/next"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/startname_dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/next"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/arklw"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/midname_dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startname_dis"
        android:layout_below="@+id/startname_dis"
        android:layout_marginTop="17dp"
        android:text="@string/bray"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/midnamebray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startname_dis"
        android:layout_below="@+id/midname_dis"
        android:layout_marginTop="21dp"
        android:text="@string/bray"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/endname_dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startname_dis"
        android:layout_below="@+id/midnamebray"
        android:layout_marginTop="22dp"
        android:text="@string/skill"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/startname_dis"
        android:layout_alignBottom="@+id/startname_dis"
        android:layout_centerHorizontal="true"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/midname_dis"
        android:layout_alignBottom="@+id/midname_dis"
        android:layout_alignLeft="@+id/textView10"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/endname_dis"
        android:layout_alignBottom="@+id/endname_dis"
        android:layout_alignLeft="@+id/textView12"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/midnamebray"
        android:layout_alignBottom="@+id/midnamebray"
        android:layout_alignLeft="@+id/textView11"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>